updated carnotaurus, tweaked paralysis